# Codigo/dtos-lib/index.ts
@@ -3,22 +3,29 @@ import { GetAllRepositoryQueryDTO, RepositoryDTO } from "./dto/repository";
 import { BranchDTO, GetAllBranchQueryDTO } from "./dto/branch";
 import { ContributorDTO, GetAllContributorQueryDTO } from "./dto/contributor";
 import { PaginationResponseDTO } from "./utils/pagination";
-import { FileChangeMetricsDTO, FileTypeMetricsDTO, FileTypeMetricDTO } from "./dto/fileMetrics";
+import {
+  FileChangeMetricsDTO,
+  FileTypeMetricsDTO,
+  FileTypeMetricDTO,
+} from "./dto/fileMetrics";
 import { ErrorResponseDTO } from "./utils/error";
 import { RepositoryMetricQueryDTO } from "./dto/repositoryMetrics";
+import { IssueMetricQueryDTO, IssueMetricsDTO } from "./dto/issueMetrics";
 
 export type {
-    RepositoryDTO,
-    PaginationResponseDTO,
-    GetAllRepositoryQueryDTO,
-    CommitMetricsDTO,
-    FileChangeMetricsDTO,
-    BranchDTO,
-    GetAllBranchQueryDTO,
-    ContributorDTO,
-    GetAllContributorQueryDTO,
-    ErrorResponseDTO,
-    RepositoryMetricQueryDTO,
-    FileTypeMetricsDTO,
-    FileTypeMetricDTO,
-}
+  RepositoryDTO,
+  PaginationResponseDTO,
+  GetAllRepositoryQueryDTO,
+  CommitMetricsDTO,
+  FileChangeMetricsDTO,
+  BranchDTO,
+  GetAllBranchQueryDTO,
+  ContributorDTO,
+  GetAllContributorQueryDTO,
+  ErrorResponseDTO,
+  RepositoryMetricQueryDTO,
+  FileTypeMetricsDTO,
+  FileTypeMetricDTO,
+  IssueMetricQueryDTO,
+  IssueMetricsDTO
+};
